# RobloxVersionArchive

./: LICENSE-MIT.md  README.md
.github/workflows/: archive.yml
China/MacPlayer/live/: LatestDeploy.json
China/MacPlayer/zcanary/: DeployHistory.json  LatestDeploy.json
China/MacPlayer/zintegration/: DeployHistory.json  LatestDeploy.json
China/MacPlayer/zlive/: DeployHistory.json
China/MacStudio/zcanary/: DeployHistory.json  LatestDeploy.json
China/MacStudio/zintegration/: LatestDeploy.json
China/MacStudio/zlive/: DeployHistory.json
China/WindowsPlayer/zcanary/: DeployHistory.json  LatestDeploy.json
China/WindowsPlayer/zintegration/: DeployHistory.json
China/WindowsPlayer/zlive/: LatestDeploy.json
China/WindowsStudio/zintegration/: DeployHistory.json  LatestDeploy.json
China/WindowsStudio/zlive/: LatestDeploy.json
China/WindowsStudio64/zcanary/: LatestDeploy.json
China/WindowsStudio64/zintegration/: DeployHistory.json  LatestDeploy.json
China/WindowsStudio64/zlive/: LatestDeploy.json
Global/MacPlayer/LIVE/: DeployHistory.json  LatestDeploy.json
Global/MacPlayer/zcanary/: DeployHistory.json  LatestDeploy.json
Global/MacPlayer/zintegration/: DeployHistory.json  LatestDeploy.json
Global/MacPlayer/zlive/: DeployHistory.json  LatestDeploy.json
Global/MacStudio/LIVE/: DeployHistory.json  LatestDeploy.json
Global/MacStudio/zcanary/: DeployHistory.json  (+1 more)
archiver/: Cargo.toml
archiver/src/: domain.rs  http.rs  lib.rs  main.rs  utils.rs
sdks/rust/: Cargo.toml
sdks/rust/src/: domain.rs  http.rs  lib.rs
tools/: archive.sh
(+71 files in other folders)
