[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
roblox_version_archive = "1.0.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
